Fixed the table stretching bug

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,3 @@
-//body{
-//	background-color: white;
-//	text-align:center;
-//	padding:55px;
-//}
-
 
 .center{
 	text-align:left;
@@ -15,8 +9,11 @@
 			vertical-align:middle;
 		}
 #siteTable{
-	/*width:100%;*/
+	//width:100%;
 	/*max-width:1600px;*/
+	cellpadding="0";
+	cellspacing="0";
+	width="5000"
 }
 header{color:blue;}
 
@@ -35,6 +32,9 @@ td{
 	border-left:1px solid #bbb;
 }
 
+td > input[type="text"]{
+	width:100%;
+}
 td.left{
 	border-left:1px solid #2e638e;
 }
@@ -75,7 +75,7 @@ td.bottom{
 }body{
 	background-color: white;
 	text-align:center;
-	padding:55px;
+	padding:0px;
 }
 
 
@@ -83,13 +83,8 @@ td.bottom{
 	text-align:left;
 }
 
-#table{
-	/*width:100%;*/
-	/*max-width:1600px;*/
-}
-
 th{
-   //background-image:url('../img/th.png');
+   background-image:url('../img/th.png');
    height:30px;
    background-repeat:no-repeat;
    color:white;
@@ -120,7 +115,7 @@ td.bottom{
 	width:20px;
 	height:15px;
 	margin-top:-3px;
-	//background-image:url('../img/grip.png');
+	background-image:url('../img/grip.png');
 	margin-left:-5px;
 	position:relative;
 	z-index:88;
